# COSC345

./: .gitignore  CMakeLists.txt  Connection.cpp  Connection.h  Doxyfile  Doxyfile.bak  GUI.cpp  GUI.h  README.md  conn  image.py  main.cpp  mainpage.md  poster_links.txt  poster_links1.txt
.github/workflows/: cmake.yaml  cmake.yml  mongodb.YAML  mongodb.yml
BuildME/: CMakeCache.txt  CMakeLists.txt  CPackConfig.cmake  CPackSourceConfig.cmake  CTestTestfile.cmake  Connection.cpp  DartConfiguration.tcl  Develop__Blog.md  Makefile  cmake_install.cmake  hello.cpp  main.cpp  work__flow.yml
Extras/: cmakethings.txt
Team Report/: devel_blog.md
assets/: REAMME.markdown  app.html
assets/Back_end/: server.js
assets/Back_end/controller/: foodController.js  movieController.js
assets/Back_end/db/: conn.js
assets/Back_end/routes/: food_routes.js  movie_routes.js
assets/Front_end/: app.html  package-lock.json  package.json
assets/Front_end/src/: App.js
assets/Front_end/src/components/: Home.js
assets/HTML/: app.html
assets/NOT_REACT_Front_end/: app.html
assets/NOT_REACT_Front_end/CSS/: style.css
backend/src/: Connection.cpp
cmake/: FindMONGOCXX.cmake
coverage/: .gitignore
data/: Movies.csv  Movies_update.txt  curated.csv  curated.txt  curated2.txt  curated3.txt
datasets/: finalmovies.csv
extras/: id.txt  poster
include/: Connection.h  GUI.h  Recommendation.h
src/: Connection.cpp  GUI.cpp  MainWindow.cpp  MainWindow.h  MyApp.cpp  MyApp.h  PagingStyle.cpp  PagingStyle.h  PagingUtil.cpp  PagingUtil.h  Recommendation.cpp  Recommendation.h  clickHandler.cpp  clickHandler.h  clickImage.cpp  clickImage.h  connection.h  imageDownload.cpp  imageDownload.h  main.cpp  main.h  myStyles.qss  read  readFile.cpp  searchBar.cpp  searchBar.h  window.h
test/: GUITest.cpp  TestFrontend.cpp  TestFrontend.h  TestMain.cpp  test  test.cpp  test.h  testBackend.cpp  testBackend.h  testClickHandler.cpp  testClickImage.cpp  testFrontend.cpp  testFrontend.h  test_conn.cpp
